--- a/app.json
+++ b/app.json
@@ -1,6 +1,13 @@
 {
-  "name": "Spring Boot Heroku Demo",
-  "description": "This is a small demo application for showing how to run a Spring Boot application on Heroku.",
-  "repository": "https://github.com/MarkvV/test",
-  "image": "heroku/java"
+  "name": "test",
+  "description": "",
+  "scripts": {},
+  "env": {},
+  "formation": {},
+  "addons": [],
+  "buildpacks": [
+    {
+      "url": "heroku/java"
+    }
+  ]
 }
